complete virtual thread implementation v1